Backend to Redirect Authorized Request to FrontEnd. FrontEnd to Handle the Authorized Request.

--- a/myblog-api/example.env
+++ b/myblog-api/example.env
@@ -11,6 +11,10 @@ HOST=localhost
 ## ex. 3000
 PORT=3000
 
+## Front End Callback URL
+## This is the url where user is redirected after social login is successful
+FRONT_END_CALLBACK_URL=http://localhost:4200/auth/callback
+
 ## Google Client ID
 ## It will be used for the authentication process
 ## ex. some-unique-id.apps.googleusercontent.com
