Generate JWT Access Token and Send to FrontEnd

--- a/myblog-api/example.env
+++ b/myblog-api/example.env
@@ -24,3 +24,7 @@ GOOGLE_CLIENT_ID=
 ## It is used for the authentication process
 ## ex. some-sort-of-secret-key
 GOOGLE_CLIENT_SECRET=
+
+## JWT Secret Key
+## It is used to create and verify JWT access token
+JWT_SECRET_KEY=some-UniQue-SecretKey
