--- a/myblog-ui/package.json
+++ b/myblog-ui/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.2.0",
     "@auth0/angular-jwt": "^5.1.2",
     "bootstrap": "^5.2.3",
+    "ngx-editor": "^15.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
