--- a/myblog-api/package.json
+++ b/myblog-api/package.json
@@ -74,6 +74,9 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      ".module.ts"
+    ]
   }
 }
