Docker Deployment Setup

--- a/myblog-api/Dockerfile
+++ b/myblog-api/Dockerfile
@@ -1,19 +1,3 @@
-## Stage 1
-# Build Angular Project
-# Copy Angular dist files to NestJs
-FROM node:18 AS ui-build
-WORKDIR /usr/src/app
-COPY ../myblog-ui/ ./myblog-ui/
-
-RUN npm install @angular/cli -g
-
-RUN cd myblog-ui && npm ci
-
-WORKDIR /usr/src/app/myblog-ui
-
-RUN ng build
-
-## Stage 2
 # Build NestJs
 # Deploy
 FROM node:18 AS api-build
@@ -24,10 +8,12 @@ COPY --from=ui-build /usr/src/app/myblog-ui/dist/ ./myblog-api/
 
 RUN cd myblog-api && npm ci
 
+RUN npm install pm2 -g
+
 WORKDIR /usr/src/app/myblog-api
 
 RUN npm run build
 
 EXPOSE 3000
 
-CMD [ "npm", "start" ]
+CMD [ "pm2", "start", "dist/main.js" ]
