Minor Readme change

--- a/myblog-api/example.env
+++ b/myblog-api/example.env
@@ -1,6 +1,6 @@
 ## MongoDB Database URL
 ## ex. mongodb://localhost/myblog-mongo
-DATABASE_URI=
+DATABASE_URI=mongodb://localhost/myblog-mongo
 
 ## Host name where the application is running
 ## ex. localhost
